# baseline

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_insight_views.py  c9d0e1f2a3b4_seed_hc900_data_source.py  d1e2f3a4b5c6_seed_garmin_connect.py  e4f5a6b7c8d9_seed_hc900_body_composition_metrics.py  ebdc40be31cf_initial_schema.py  f1g2h3i4j5k6_operational_platform_onda1.py
app/: main.py
app/core/: config.py  database.py  dependencies.py  logging_config.py
app/integrations/: __init__.py
app/models/: __init__.py  agent_instance.py  base.py  data_source.py  (+14 more)
docs/: architecture.md  data-model.md  operations.md  today_v2.md
scripts/: analytics.sql  bootstrap_operational.py  discover_scales.py  garmin_config.json.example  import_scale.py  register_autostart.ps1  reprocess_hc900.py  scale_profile.json.example  scan_scale.py  seed.py  start_api.ps1  sync_garmin.py
tests/: conftest.py  test_api.py  test_domain_rules.py  test_garmin_b3.py  test_garmin_integration.py  test_garmin_scheduler.py  test_garmin_sync_endpoint.py  test_hc900_body_composition.py  test_hc900_decoder.py  test_ingestion.py  test_ingestion_run_link.py  test_insights.py  test_invariants.py  test_medication_b7.py  test_operational_platform.py  test_scale_integration.py  test_scale_latest.py  test_scale_scan_b4.py  test_status.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
view_definitions/: insight_views_a1b2c3d4e5f6.py
(+105 files in other folders)
